✨ 统一 JDK8 和 JDK21 相关代码